fix: responsive alignment

--- a/styling/theme.css
+++ b/styling/theme.css
@@ -69,4 +69,11 @@
 body {
 	background-color: var(--bg-color);
 	color: var(--text-color);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin: auto;
+	padding: 20px;
+	width: 100%;
 }
